--- a/style.css
+++ b/style.css
@@ -26,6 +26,19 @@ textarea,
 button {
     padding: 10px;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    font:100 1.2rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font:100 1.1rem sans-serif;
+    border-radius: 5px;
+    outline: none;
+    margin: 10px;
+}
+
+button {
+    background-color: rgb(50, 50, 50);
+    color: white;
+    cursor: pointer;
+    transition : all 0.5s;
+}
+
+button:hover {
+    background-color: rgb(61, 9, 156);
 }
