--- a/style.css
+++ b/style.css
@@ -42,3 +42,33 @@ button {
 button:hover {
     background-color: rgb(61, 9, 156);
 }
+
+.task {
+    background-color: rgb(247,247,247);
+    font:100 1.1rem sans-serif;
+    padding: 30px;
+    color: rgba(0,0,0, 0.868);
+    display: flex;
+    margin: 2vmax;
+    align-items: center;
+}
+.task > div {
+    width: 100%;
+}
+.task span {
+    color: rgba(0, 0, 0, 0.663);
+
+}
+
+.deleteBtn {
+    border-radius: 100%;
+    width:30px;
+    height:30px;
+    font-size: 1.6rem;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    background-color: crimson;
+
+
+}
